# llm-finetuned-supportbot

./: .editorconfig  .gitattributes  .gitignore  .markdownlint.json  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  GEMINI.md  PRD.txt  README-task-master.md  README.md  SCHEMA.md  demo.py  main.py  markdownlint.json  pyproject.toml  requirements.in  requirements.txt  run.sh
.clinerules/: 02-memory-bank.md  Cline Mastery Guide.md  cline-developer-cheatsheet.md
.cursor/: mcp.json
.github/: .pre-commit-config.yaml  COMMIT_TEMPLATE.txt  PULL_REQUEST_TEMPLATE.md
.rulesync/: overview.md
.taskmaster/: .github.workflow.README.md  config.json  state.json
api/: README.md  main.py
config/: mcp_servers.generated.toml
configs/: dpo.yaml  sft.yaml
cursor/: mcp.json
docs/: CHANGELOG.md
instructions/: efficiency_mode.md  mcp_techstack_toml.instr.md  uv-cheatsheet.md
logs/: git-cherry_main-feature_taskmaster-merge.md  pytest-q.txt  pytest_-q.txt  scratch.md  test_presets_error-log.02.txt  test_presets_error-log.txt
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
schema/: data_schema.json
scripts/: PRD.txt  eval.py  format.sh  generate_schema.py  lint.sh  open_pr.ps1  open_pr.sh  package_model.py  prepare_data.py  split_dataset.py  tokenize_dataset.py  train.py  train_lora.py
src/: __init__.py  chunking.py  eval_schema.py  evaluation.py  models.py  split.py  tokenization.py
taskmaster/: config.json  state.json
tests/: test_chunking.py  test_evaluation.py  test_models.py  (+7 more)
(+69 files in other folders)
