[project]
name = "llm-finetune-supportbot"
version = "0.1.0"
description = "Fine-tune a small LLM on support data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "transformers",
    "datasets",
    "peft",
    "trl",
    "accelerate",
    "bitsandbytes",
    "evaluate",
    "pydantic>2",
    "black",
    "ruff",
    "pre-commit",
    "fastapi[standard]",
    "uvicorn"
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-pythonpath>=0.7.3",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
src = ["src"]
select = ["E", "F", "I", "W"]
ignore = ["E501", "E402"]

[tool.ruff.lint.pydocstyle]
convention = "google"
